在Test中提交一种网上推荐比较好，考虑到线程安全的单例模式

--- a/MFCDemo/MFCDemo/MFCDemo.vcxproj.filters
+++ b/MFCDemo/MFCDemo/MFCDemo.vcxproj.filters
@@ -57,6 +57,9 @@
     <ClInclude Include="System\RouteManager\RouteManager.h">
       <Filter>头文件</Filter>
     </ClInclude>
+    <ClInclude Include="Test\Singleton\SingletonCT.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="stdafx.cpp">
@@ -90,6 +93,9 @@
       <Filter>源文件</Filter>
     </ClCompile>
     <ClCompile Include="System\RouteManager\RouteManager.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
+    <ClCompile Include="Test\Singleton\SingletonCT.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
   </ItemGroup>
