--- a/MFCDemo/MFCDemo/MFCDemo.vcxproj
+++ b/MFCDemo/MFCDemo/MFCDemo.vcxproj
@@ -184,6 +184,7 @@
     </ResourceCompile>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClInclude Include="Test\Singleton\SingletonCT.h" />
     <ClInclude Include="System\RouteManager\file\RouteFile.h" />
     <ClInclude Include="System\RouteManager\object\HWPoint.h" />
     <ClInclude Include="System\RouteManager\object\HWSegment.h" />
@@ -200,6 +201,7 @@
     <ClInclude Include="Utils\File\csv.hpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="Test\Singleton\SingletonCT.cpp" />
     <ClCompile Include="System\RouteManager\file\RouteFile.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">NotUsing</PrecompiledHeader>
     </ClCompile>
