--- a/MFCDemo/MFCDemo/MFCDemo.vcxproj.filters
+++ b/MFCDemo/MFCDemo/MFCDemo.vcxproj.filters
@@ -60,6 +60,9 @@
     <ClInclude Include="Test\Singleton\SingletonCT.h">
       <Filter>头文件</Filter>
     </ClInclude>
+    <ClInclude Include="System\RouteManager\object\AdjacencyMatrix.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="stdafx.cpp">
@@ -96,6 +99,9 @@
       <Filter>源文件</Filter>
     </ClCompile>
     <ClCompile Include="Test\Singleton\SingletonCT.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
+    <ClCompile Include="System\RouteManager\object\AdjacencyMatrix.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
   </ItemGroup>
