--- a/MFCDemo/MFCDemo/config/ormpp.cfg
+++ b/MFCDemo/MFCDemo/config/ormpp.cfg
@@ -2,7 +2,7 @@
   "db_ip": "127.0.0.1",
   "user_name": "root",
   "pwd": "123456",
-  "db_name": "springdemo",
+  "db_name": "mfcdemo",
   "timeout": 2,
   "db_conn_num": 4
 }
