--- a/MFCDemo/MFCDemo/MFCDemo.vcxproj.filters
+++ b/MFCDemo/MFCDemo/MFCDemo.vcxproj.filters
@@ -123,6 +123,12 @@
     <ClInclude Include="System\RouteManager\model\StationModel.h">
       <Filter>头文件</Filter>
     </ClInclude>
+    <ClInclude Include="Utils\Log\easylogging++.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
+    <ClInclude Include="Version.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="stdafx.cpp">
@@ -168,6 +174,9 @@
       <Filter>源文件</Filter>
     </ClCompile>
     <ClCompile Include="System\RouteManager\model\StationModel.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
+    <ClCompile Include="Utils\Log\easylogging++.cc">
       <Filter>源文件</Filter>
     </ClCompile>
   </ItemGroup>
