添加作用域

--- a/MFCDemo/MFCDemo/MFCDemo.vcxproj
+++ b/MFCDemo/MFCDemo/MFCDemo.vcxproj
@@ -190,6 +190,7 @@
     </ResourceCompile>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClInclude Include="System\LiftManager\Lift.h" />
     <ClInclude Include="System\RouteManager\model\StationModel.h" />
     <ClInclude Include="Utils\Log\easylogging++.h" />
     <ClInclude Include="Utils\SQL\SQLUtils.h" />
@@ -230,6 +231,7 @@
     <ClInclude Include="Version.h" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="System\LiftManager\Lift.cpp" />
     <ClCompile Include="System\RouteManager\model\StationModel.cpp" />
     <ClCompile Include="Utils\Log\easylogging++.cc">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">NotUsing</PrecompiledHeader>
