--- a/MFCDemo/MFCDemo/MFCDemo.vcxproj.filters
+++ b/MFCDemo/MFCDemo/MFCDemo.vcxproj.filters
@@ -129,6 +129,9 @@
     <ClInclude Include="Version.h">
       <Filter>头文件</Filter>
     </ClInclude>
+    <ClInclude Include="System\LiftManager\Lift.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="stdafx.cpp">
@@ -177,6 +180,9 @@
       <Filter>源文件</Filter>
     </ClCompile>
     <ClCompile Include="Utils\Log\easylogging++.cc">
+      <Filter>源文件</Filter>
+    </ClCompile>
+    <ClCompile Include="System\LiftManager\Lift.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
   </ItemGroup>
